--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "add": "^2.0.6",
     "bootstrap": "^5.2.2",
-    "git": "^0.1.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -26,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "depoly" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +47,6 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "homepage" :  "https://github.com/PigPenguinMan/React_Shop"
 }
